--- a/Connect2Fit/app/src/main/res/layout/activity_register_page.xml
+++ b/Connect2Fit/app/src/main/res/layout/activity_register_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.muhammadabdullah.connect2fit.TrainerPage">
+    tools:context="com.example.muhammadabdullah.connect2fit.registerPage">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_trainer_page" />
+    <include layout="@layout/content_register_page"
+        android:id="@+id/include" />
 
 </android.support.design.widget.CoordinatorLayout>
