--- a/Connect2Fit/app/src/main/res/layout/content_register_page.xml
+++ b/Connect2Fit/app/src/main/res/layout/content_register_page.xml
@@ -10,7 +10,7 @@
     android:background="@drawable/signup">
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/lastName"
         android:layout_width="353dp"
         android:layout_height="59dp"
         android:layout_marginBottom="8dp"
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.302" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/email"
         android:layout_width="353dp"
         android:layout_height="59dp"
         android:layout_marginBottom="8dp"
@@ -52,7 +52,7 @@
         app:layout_constraintVertical_bias="0.463" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/password"
         android:layout_width="353dp"
         android:layout_height="59dp"
         android:layout_marginBottom="8dp"
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.623" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/confirmPassword"
         android:layout_width="353dp"
         android:layout_height="59dp"
         android:layout_marginBottom="8dp"
@@ -94,7 +94,7 @@
         app:layout_constraintVertical_bias="0.784" />
 
     <EditText
-        android:id="@+id/editText9"
+        android:id="@+id/firstName"
         android:layout_width="353dp"
         android:layout_height="59dp"
         android:layout_marginBottom="8dp"
@@ -136,42 +136,23 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button7"
-        android:layout_width="148dp"
+        android:id="@+id/sign_up_button"
+        android:layout_width="355dp"
         android:layout_height="69dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
-        android:text="Im a Client"
+        android:text="Sign Up"
         android:textColor="@android:color/background_light"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="148dp"
-        android:layout_height="69dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/transparent"
-        android:text="Im a Trainer"
-        android:textColor="@android:color/background_light"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.963"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="-89dp" />
 
     <CheckBox
         android:id="@+id/checkBox"
