--- a/Connect2Fit/app/src/main/res/layout/activity_register_page.xml
+++ b/Connect2Fit/app/src/main/res/layout/activity_register_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.muhammadabdullah.connect2fit.registerPage">
+    tools:context="com.example.muhammadabdullah.connect2fit.ui.RegisterPage">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
